assets/css/common.css
* {
    margin: 0;
    box-sizing: border-box;
}

:root {
    --theme-color: #1B86E4;
    --text-theme: #155e9d;
    --text-link: #2a7ae2;
    --text-base: black;
    --shadow: rgba(184, 194, 215, 0.35);
    --text-sub: #666;
    --text-sub2: #888;
    --text-sub-hide: #aaa;
    --background-text: #eee;
    --background-text-sub: #f4f4f4;
    --text-in-header: white;
    --sep: #eee;
    --sep-deep: #ddd;
    --background-body: #f8f8f8;
    --background-base: white;
}

[dark-mode-enabled] {
    --theme-color: #282C34;
    --text-theme: #b3c7e6;
    --text-link: #2a7ae2;
    --text-base: #CCC;
    --shadow: #222222;
    --text-sub: #AFB1B3;
    --text-sub2: #9D9FA1;
    --text-sub-hide: #aaa;
    --background-text: #3E4249;
    --background-text-sub: #2C313C;
    --text-in-header: #EBEBEB;
    --sep: #444;
    --sep-deep: #555;
    --background-body: #21252B;
    --background-base: #282C34;
}

body,
.header,
.card{
    transition: .2s background-color, .2s color, .2s box-shadow-color, .2s border-color;
}

body {
    font-family: Roboto, Helvetica, Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
    background: var(--background-body);
}

i, b, strong, del {
    font-size: inherit;
    color: inherit;
}

#dark-mode-toggle::before {
    content: "\f186";
}

[dark-mode-enabled] #dark-mode-toggle::before {
    content: "\f185";
}

.post-article {
    color: var(--text-base);
}

#article-content h1 {
    font-weight: normal;
    border-bottom: 1px solid var(--sep-deep);
    margin: .5em 0;
}

#article-content h2 {
    margin: .5em 0;
}

#article-content h3 {
    font-weight: normal;
}

.highlight-header {
    background: var(--background-text);
}

.article-banner {
    padding: 2.5em 0 .5em;
}

.article-card {
    box-shadow: var(--shadow) 0 3px 6px 3px;
    margin-top: -17em;
    border-radius: 8px;
    background: var(--background-base);
    padding: 0 1.5em 2em;
}

.comment-card {
    box-shadow: var(--shadow) 0 3px 6px 3px;
    border-radius: 8px;
    background: var(--background-base);
    padding: .5em 1.5em 2em;
    margin: 1em 0;
}

.card {
    box-shadow: var(--shadow) 0 3px 4px 2px;
    border-radius: 4px;
    background: var(--background-base);
}

.card:hover {
    box-shadow: var(--shadow) 0 6px 9px 3px;
}

.article-title,
.article-subtitle,
.post-header,
#article-content h1,
#article-content h2,
#article-content h3 {
    color: var(--text-theme);
    transition: .3s;
}

#article-content h1,
#article-content h2,
#article-content h3 {
    border-radius: .3em;
    margin-right: -.3em;
    margin-left: -.3em;
    padding-right: .3em;
    padding-left: .3em;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    cursor: pointer;
    text-decoration: none;
}

#article-content a,
.link,
.footer a {
    color: var(--text-link);
    text-decoration: none;
}

.footer {
    color: var(--text-sub)
}

.sep-line {
    border-top: var(--sep) solid 1px;
    margin: .5em 0;
}

#article-content a:hover,
.link:hover,
.footer a:hover {
    cursor: pointer;
    text-decoration: underline;
}

.hover-underline:hover {
    text-decoration: underline;
}

#article-content p,
#article-content strong {
    margin: 1em 0;
}

h1, .h1 {
    font-size: 32px;
}

h2, .h2 {
    font-size:24px;
}

h3, .h3 {
    font-size:20px
}

h4, .h4 {
    font-size:17px
}

h5, .h5 {
    font-size:14px
}

h6, .h6 {
    font-size:12px
}

.dynamic-inline-block {
    display: inline-block;
}

.inline-block {
    display: inline-block;
}

.highlighter-rouge {
    background-color: var(--background-text);
    border-radius: 4px;
}

.rouge-code > pre,
.highlighter-rouge,
.lineno{
    font-family: "Cascadia Code PL", Consolas, "Microsoft YaHei", monospace;
}

.rouge-code > pre {
    margin-left: .4em;
}

.rouge-gutter {
    border-right: 2px #444 solid;
    padding: 0 .7em 0 0;
    text-align: right;
}

#article-content table:not(.rouge-table) {
    border-collapse: collapse;
    margin:0 auto;
    box-shadow: var(--shadow) 0 1px 2px 2px;
}

#article-content table:not(.rouge-table) > tbody > tr:hover {
    background-color: var(--background-text-sub);
}

code table {
    margin:0;
}

code tbody tr {
    border: none;
}

thead tr {
    border-bottom: var(--sep-deep) 1px solid;
    text-align: left;
    background-color: var(--background-text);
    font-weight: normal;
}

tbody tr {
    transition: .3s;
    border-bottom: var(--sep) 1px solid;
}

table:not(.rouge-table) th,
table:not(.rouge-table) td {
    padding: .8em 1em;
}

.hidden {
    display: none !important;
}

.center {
    text-align: center;
}

.bold {
    font-weight: bold;
}

.fixed {
    position: fixed;
    top: 0;
}

.underlined {
    border-bottom: 1px solid var(--sep);
}

div.highlight {
    padding: .1em .7em;
    border-radius: .3em;
    overflow-x: auto;
    box-shadow: var(--shadow) 0 3px 5px 3px;
}

.highlight code {
    padding: 0;
    color: inherit;
    background-color: transparent;
}

blockquote {
    margin: .5em 0;
    padding: .2em 2em;
    border-left: 3px var(--sep-deep) solid;
    color: var(--text-sub2);
}

/* handle positioning exception with formulas in blockquote*/
blockquote .MJXc-display {
    padding-bottom: 1em;
    margin-bottom: 0;
}

blockquote > p {
    margin: 0;
}

body {
    line-height: 1.6;
    display: flex;
    min-height: 100vh;
    flex-flow: column;
}

.article-header {
    height: 20em;
}

.article-title {
    font-size: 2.1em;
    border-bottom: 1px solid var(--sep-deep);
    font-weight: bold;
}

.article-subtitle {
    font-size: 1.5em;
    font-weight: bold;
}

.article-date {
    margin-top: 1em;
}

.article-date,
.article-date-label{
    color: var(--text-sub);
    font-size: .9em;
    font-weight: bold;
}

.article-date > .fa,
.article-tags > .fa {
    width: 15px
}

.article-tags > .tag {
    margin: 0;
}

.article-date > span,
.article-date-label{
    margin: 0 .3em;
}

.side-card {
    margin-bottom: 1em;
    padding: .5em;
}

.navigation {
    display: flex;
}
/* ... */

